[package]
name = "common_util-simplelog-server"
version = "0.0.1"
authors = ["yuer1727 <yuer1727@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
lazy_static = "1.4.0"
serde_json = "1.0.45"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.2"
chrono = "0.4"
log = "0.4.8"
log4rs = "0.10.0"
threadpool = "1.7.1"




